# video_stream_python

./: README.md  client_fastapi.py  fastapi2_app.py  fastapi_app.py  flask_app.py  pyproject.toml  python_type.py  queue_pract.py
tests/: test_fastapi_app.py  test_flask_app.py
