[tool.poetry]
name = "stream_video"
version = "0.1.0"
description = "Video stream application"
authors = ["prabal <prabal01pathak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
opencv-python = "^4.5.5"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
requests = "^2.27.1"
Flask = "^2.1.1"
websocket-client = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
